# meilisearch-sql-connector

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
crates/meilisearch-sql-connector/: Cargo.toml
crates/meilisearch-sql-connector/src/: cli.rs  common.rs  connector.rs  error.rs  lib.rs  logging.rs  main.rs
crates/meilisearch-sql-connector/src/config/: generator.rs  mod.rs
crates/meilisearch-sql-connector/src/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/meilisearch-sql-connector/src/meilisearch/: client.rs  mod.rs
crates/meilisearch-sql-connector/tests/: config.rs  connector.rs  docs.rs  error.rs  examples.rs  integration.rs  mod.rs  run_tests.sh  sqlite.rs  test_runner.rs  utils.rs
crates/meilisearch-sql-connector/tests/fixtures/: config.toml
docs/: ARCHITECTURE.md  TODO.md
docs/examples/: config.toml  texts_single_table_config.toml  texts_test_config.toml
tests/: setup_test_db.sql  test_schema_changes.sh
